Fix table preview: keep rows from growing too high, and force horizontal scroll if they run off the side of the screen.

--- a/hxl_proxy/static/hxl-theme/hxl-theme.css
+++ b/hxl_proxy/static/hxl-theme/hxl-theme.css
@@ -13,3 +13,13 @@
 .panel-title a:before {
     content: "-";
 }
+
+.table-container {
+    overflow-x: auto;
+}
+
+td>.content {
+    display: block;
+    max-height: 10ex;
+    overflow-y: auto;
+}
